custom-resource-consumers/takeout/flux-system/webhook-receiver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-reciever
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${cloudflared_tunnel_uuid}.cfargotunnel.com
    nginx.ingress.kubernetes.io/limit-rpm: "60"
  labels:
    # This is necessary due to the flux Network Policy blocking any pods
    # that aren't notification-controller
    use-cloudflare-dns-solver: "true"
spec:
  tls:
    - hosts:
        - &host "flux-receiver.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: /hook
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
